# broadcast2

./: .gitignore
app/: .admin.py.icloud  .models.py.icloud  .serializers.py.icloud  .utils.py.icloud  .views.py.icloud
app/migrations/: .0001_initial.py.icloud  .0002_auto_20210120_0836.py.icloud  .0003_device.py.icloud
back/: Dockerfile  docker-compose.yaml  pyproject.toml
back/app/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
back/app/migrations/: 0001_initial.py  0002_auto_20210120_0836.py  0003_device.py  0004_device_sid.py  0005_broadcast.py  0006_poll.py  0007_poll_timer_seconds.py  0008_auto_20210124_1221.py
back/app/static/: index.html
back/broadcast/: asgi.py  settings.py  urls.py  websocket.py  wsgi.py
front/: package.json  server.js
front/src/: App.module.css  App.tsx  constants.ts  index.css
front/src/components/: Button.module.css  Button.tsx  Card.module.css  Card.tsx  Frame.module.css  Frame.tsx  Header.module.css  Header.tsx  Input.module.css  Input.tsx  Instruction.module.css  Instruction.tsx  Layout.module.css  Layout.tsx  Logo.module.css  Logo.tsx  Paragraph.module.css  Paragraph.tsx  Policy.tsx  Popup.module.css  Popup.tsx  Time.module.css  Time.tsx  Vote.module.css  Vote.tsx
front/src/pages/: AboutPage.module.css  AboutPage.tsx  AuthPage.tsx  BeforeTranslation.tsx  Live.module.css  LivePage.tsx  LiveVotePage.tsx  MainPage.module.css  MainPage.tsx  RegisterPage.module.css  RegisterPage.tsx  StartLivePage.tsx
front/src/state/: instructionAction.ts  loginContext.ts  socketContext.ts  socketReducer.ts
